src/main/java/com/example/springbootdemo/error/exceptions/UserPasswordIncorrectException.java
package com.example.springbootdemo.error.exceptions;

public class UserPasswordIncorrectException extends RuntimeException {
    public UserPasswordIncorrectException(String s) {
        super(s);
    }
}
